[tool.poetry]
name = "healthier"
version = "0.1.0"
description = ""
authors = ["Bruno Arueira <contato@brunoarueira.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.1.3"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
