[tool.poetry]
name = "healthier"
version = "0.1.0"
description = ""
authors = ["Bruno Arueira <contato@brunoarueira.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.3.2"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
bandit = "^1.7.8"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
